test/corpus/arr.txt
=================================================================================
array creation
=================================================================================

i32[10](-2);
i32[10, 10](0, 5);

Point[5](Point(0, 0));

---

(file
  (expression_statement
    (array_creation_expression
      (integral_type)
      (array_rank_specifier
        (integer_literal))
      (argument_list
        (unary_expression
          (integer_literal)))))
  (expression_statement
    (array_creation_expression
      (integral_type)
      (array_rank_specifier
        (integer_literal)
        (integer_literal))
      (argument_list
        (integer_literal)
        (integer_literal))))
  (expression_statement
    (array_creation_expression
      (type_identifier)
      (array_rank_specifier
        (integer_literal))
      (argument_list
        (call_expression
          (identifier)
          (argument_list
            (integer_literal)
            (integer_literal)))))))

=================================================================================
array variable declaration
=================================================================================

i32[] arr = i32[10](-2);
i32[,] arr = i32[10,10](0, 5);

arr := i32[10](-2);
arr := i32[10, 10](0, 5);

---

(file
  (variable_declaration
    (typed_variable_declarator
      (array_type
        (integral_type)
        (array_rank_specifier))
      (identifier)
      (array_creation_expression
        (integral_type)
        (array_rank_specifier
          (integer_literal))
        (argument_list
          (unary_expression
            (integer_literal))))))
  (variable_declaration
    (typed_variable_declarator
      (array_type
        (integral_type)
        (array_rank_specifier))
      (identifier)
      (array_creation_expression
        (integral_type)
        (array_rank_specifier
          (integer_literal)
          (integer_literal))
        (argument_list
          (integer_literal)
          (integer_literal)))))
  (variable_declaration
    (inferred_variable_declarator
      (identifier)
      (array_creation_expression
        (integral_type)
        (array_rank_specifier
          (integer_literal))
        (argument_list
          (unary_expression
            (integer_literal))))))
  (variable_declaration
    (inferred_variable_declarator
      (identifier)
      (array_creation_expression
        (integral_type)
        (array_rank_specifier
          (integer_literal)
          (integer_literal))
        (argument_list
          (integer_literal)
          (integer_literal))))))
