test/corpus/clauses.txt
=================================================================================
use clause
=================================================================================

use Core.print
use Core.time

---

(file
  (clause
    (use_clause
      (scoped_identifier
        (identifier)
        (identifier))))
  (clause
    (use_clause
      (scoped_identifier
        (identifier)
        (identifier)))))
