test/corpus/declarations.txt
=================================================================================
variable declaration
=================================================================================

i32 a = 32;
str b = "hi";
inferred := i32[10](0);

---

(flint_file
  (compound_statement
    (variable_declaration
      (typed_variable_declaration
        (integral_type)
        (identifier)
        (decimal_integer_literal))))
  (simple_statement)
  (compound_statement
    (variable_declaration
      (typed_variable_declaration
        (type_identifier)
        (identifier)
        (string_literal))))
  (simple_statement)
  (compound_statement
    (variable_declaration
      (inferred_variable_declaration
        (identifier)
        (array_creation_expression
          (integral_type)
          (array_rank_specifier
            (decimal_integer_literal))
          (group_expression
            (decimal_integer_literal))))))
  (simple_statement))

=================================================================================
group declaration
=================================================================================

(x, y)  := expr;

---

(flint_file
  (compound_statement
    (variable_declaration
      (inferred_variable_declaration
        (group_expression
          (identifier)
          (identifier))
        (identifier))))
  (simple_statement))

=================================================================================
enum declaration
=================================================================================

enum MyEnum:
    VAL1, VAL2, VAL3;

enum MyEnum:
    VAL1,
    VAL2,
    VAL3;

---

(flint_file
  (compound_statement
    (enum_declaration
      (identifier)
      (enum_body
        (identifier)
        (identifier)
        (identifier))))
  (compound_statement
    (enum_declaration
      (identifier)
      (enum_body
        (identifier)
        (identifier)
        (identifier)))))

=================================================================================
function declaration
=================================================================================

def main():
    print("Hello, World");

def main() -> void:
    print("Hi");

---

(flint_file
  (compound_statement
    (function_declaration
      (identifier)
      (parameters)
      (block
        (simple_statement
          (expression_statement
            (function_invocation
              (identifier)
              (group_expression
                (string_literal))))))))
  (compound_statement
    (function_declaration
      (identifier)
      (parameters)
      (void_type)
      (block
        (simple_statement
          (expression_statement
            (function_invocation
              (identifier)
              (group_expression
                (string_literal)))))))))

=================================================================================
test declaration
=================================================================================

test "succeeds":
    assert(true);

---

(flint_file
  (compound_statement
    (test_declaration
      (block
        (simple_statement
          (expression_statement
            (function_invocation
              (identifier)
              (group_expression
                (true)))))))))
