test/corpus/literals.txt
=================================================================================
decimal integer literals
=================================================================================

123;
42;
1_000_000_000;

---

(file
  (expression_statement
    (integer_literal))
  (expression_statement
    (integer_literal))
  (expression_statement
    (integer_literal)))

=================================================================================
floating point literals
=================================================================================

1.23;
.2345;

---

(file
  (expression_statement
    (float_literal))
  (expression_statement
    (float_literal)))

=================================================================================
boolean literals
=================================================================================

true;
false;

---

(file
  (expression_statement
    (true))
  (expression_statement
    (false)))

=================================================================================
none literal
=================================================================================

none;

---

(file
  (expression_statement
    (none)))

=================================================================================
default literal
=================================================================================

_;

---

(file
  (expression_statement
    (default_val)))

=================================================================================
character literals
=================================================================================

'a';
'%';
'\t';
'\\';
'\'';

---

(file
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal)))

=================================================================================
string literals
=================================================================================

"Hello, World\n";
"test";
$"Interpolated string";
$"Actually {x} interpolated string";
"Escaped \\ a slash";

---

(file
  (expression_statement
    (string_literal
      (string_fragment)
      (escape_sequence)))
  (expression_statement
    (string_literal
      (string_fragment)))
  (expression_statement
    (interpolated_string_literal
      (string_fragment)))
  (expression_statement
    (interpolated_string_literal
      (string_fragment)
      (string_interpolation
        (identifier))
      (string_fragment)))
  (expression_statement
    (string_literal
      (string_fragment)
      (escape_sequence)
      (string_fragment))))

=================================================================================
escape sequences
=================================================================================

"\n\a\b\fhi im a piece of text\t\v and im some more text \\\'\"\?";

---

(file
  (expression_statement
    (string_literal
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

=========================================
char escapes
=========================================

'\b';
'\t';
'\n';
'\f';
'\r';
'\"';
'\'';
'\\' + 'a';

---

(file
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal))
  (expression_statement
    (character_literal))
  (expression_statement
    (binary_expression
      (character_literal)
      (character_literal))))
